--- a/extensiones/composer.json
+++ b/extensiones/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "mike42/escpos-php": "^2.0"
+        "mike42/escpos-php": "^2.0",
+        "luecano/numero-a-letras": "^1.4"
     }
 }
